@@ -33,6 +33,7 @@ export(showCoeftest)
 export(showColsNA)
 export(showRowsNA)
 export(standardizeCoefficients)
+export(testSpecification)
 export(texreg_tvalues)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
